@@ -470,6 +470,8 @@ AC_ARG_WITH(test-server,
 )
 AM_CONDITIONAL(TEST_SERVER, test x$test_server = xtrue)
 
+AC_CHECK_RPATH
+
 CFLAGS="$USE_THREADS $USE_OPT_C $USE_DEBUG_C $USE_INLINE_C $USE_PROFILE_C"
 CXXFLAGS="$USE_THREADS $USE_OPT_CXX $USE_DEBUG_CXX $USE_INLINE_CXX  $USE_PROFILE_CXX -DQT_THREAD_SUPPORT=1"
 
